cargo-features = ["profile-rustflags"]
[package]
name = "giuroll"
authors = ["Giufin (2023~2024)", "Hagb (Junyu Guo) <hagb@hagb.name> (2024)"]
license = "MIT"
# Increase DLL_REVISION in build.rs when pre-release version is bumped or removed with fixed major.minor.patch version, and
# reset DLL_REVISION when major.minor.patch version is bumped.
version = "0.6.18-alpha.2"
edition = "2021"
build = "build.rs"
description = "A network rollback mod for 東方非想天則 / Touhou 12.3 Hisoutensoku, with also support for replay rewind and takeover"
homepage = "https://github.com/Hagb/giuroll-hagb"
repository = "https://github.com/Hagb/giuroll-hagb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[features]
logtofile = ["dep:fern", "dep:humantime", "dep:log"]
allocconsole = []
f62 = []
logrollback = []
lowframetest = ["dep:rand"]
fillfree = ["dep:rand"]
cn = []

[dependencies.windows]
version = "0.57.0"
features = [
    "Win32_System_Memory",
    "Win32_Networking_WinSock",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_LibraryLoader"
]

[dependencies]
ilhook = { path = "ilhookmod" }
mininip = { path = "mininip" }                              #"1.3.1"
winapi = { version = "0.3.9", features = ["d3d9"] }
version-compare = { version = "0.2.0" }

fern = { version = "0.6.2", optional = true }
humantime = { version = "2.1.0", optional = true }
log = { version = "0.4.17", optional = true }
rand =  { version = "0.8.5", optional = true }

[profile.release]
strip = true
rustflags = ["-C", "target-feature=+crt-static"]

[profile.dev]
rustflags = ["-C", "target-feature=+crt-static"]


[package.metadata.winres]
OriginalFilename = "giuroll.dll"

[build-dependencies]
winres = { version = "0.1", path = "winres" }

[dev-dependencies]
serde_json = "1.0"
